updated the transactions swagger doc
